fix overflow

--- a/css/index.css
+++ b/css/index.css
@@ -286,7 +286,7 @@ main {
     width: 100%;
     height: 500vh;
     background-color: #f1f1f1;
-    overflow-x: hidden;
+   
 }
 
 section {
